fixed sonatype lift recommendation